// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering both pending and issued verifications 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "borderColor": "rgba(216,216,216,1)",
      "borderTopWidth": 1,
      "flex": 1,
      "padding": 10,
    }
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "claim": Object {
            "employer": "Consensys AG",
          },
          "exp": 1482354617248,
          "iat": 1482268217248,
          "iss": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "issuer": Object {
            "name": "Issuer Name",
          },
          "sub": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "token": "tokenstring",
        },
        Object {
          "claim": Object {
            "Name": "test",
          },
          "exp": 1482354617247,
          "iat": 1482268217247,
          "iss": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "sub": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "token": "tokenstring",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    invertStickyHeaders={undefined}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  Issuer Name
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Employer
                </Text>
              </View>
              <ExpirationItem
                d={2016-12-21T21:10:17.248Z}
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                Consensys AG
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  0x88647b5a...
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Name
                </Text>
              </View>
              <ExpirationItem
                d={2016-12-21T21:10:17.247Z}
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                test
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`rendering connected empty 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "borderColor": "rgba(216,216,216,1)",
      "borderTopWidth": 1,
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View>
    <Image
      source={
        Object {
          "testUri": "../../../images/inboxIcon.png",
        }
      }
      style={
        Object {
          "alignSelf": "center",
          "marginTop": 80,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "padding": 16,
            "paddingTop": 20,
          },
        ]
      }
    >
      You don't have any verifications yet.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontFamily": "NunitoSans-Light",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      Verifications are issued by services you interact with using uPort.
    </Text>
  </View>
  <RCTScrollView
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    invertStickyHeaders={undefined}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`rendering connected with verifications 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "borderColor": "rgba(216,216,216,1)",
      "borderTopWidth": 1,
      "flex": 1,
      "padding": 10,
    }
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "claimType": "nationalId",
          "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
          "issuer": Object {
            "name": "Issuer 1",
          },
          "options": Object {
            "applicant_id": 1234,
          },
        },
        Object {
          "claimType": "name",
          "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
          "issuer": Object {
            "name": "Issuer 1",
          },
          "options": Object {},
        },
        Object {
          "claimType": "nationalId",
          "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
          "issuer": Object {
            "name": "Issuer 2",
          },
          "options": Object {},
        },
        Object {
          "claim": Object {
            "nationalId": "xxx0xxxx0xxx",
          },
          "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
          "issuer": Object {
            "name": "Issuer 1",
          },
          "token": "0014.TOKEN",
        },
        Object {
          "claim": Object {
            "phone": "555-555-5555",
          },
          "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
          "issuer": Object {
            "name": "Issuer 1",
          },
          "token": "0013.TOKEN",
        },
        Object {
          "claim": Object {
            "name": "Alice",
          },
          "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
          "issuer": Object {
            "name": "Issuer 2",
          },
          "token": "0011.TOKEN",
        },
        Object {
          "claim": Object {
            "name": "Alice",
          },
          "exp": 2,
          "iss": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
          "issuer": Object {
            "name": "Issuer 1",
          },
          "token": "0015.TOKEN",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    invertStickyHeaders={undefined}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  National
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Issuer 1
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                pending
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  Name
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Issuer 1
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                pending
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  National
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Issuer 2
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                pending
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  Issuer 1
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  National
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                xxx0xxxx0xxx
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  Issuer 1
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Phone
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                555-555-5555
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  Issuer 2
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Name
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                Alice
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  Issuer 1
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Name
                </Text>
              </View>
              <ExpirationItem
                d={1970-01-01T00:00:00.002Z}
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                Alice
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`rendering empty 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "borderColor": "rgba(216,216,216,1)",
      "borderTopWidth": 1,
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View>
    <Image
      source={
        Object {
          "testUri": "../../../images/inboxIcon.png",
        }
      }
      style={
        Object {
          "alignSelf": "center",
          "marginTop": 80,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "padding": 16,
            "paddingTop": 20,
          },
        ]
      }
    >
      You don't have any verifications yet.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(74,74,74,1)",
          "fontFamily": "NunitoSans-Light",
          "fontSize": 16,
          "lineHeight": 22,
          "textAlign": "center",
        }
      }
    >
      Verifications are issued by services you interact with using uPort.
    </Text>
  </View>
  <RCTScrollView
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    invertStickyHeaders={undefined}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`rendering only issued verifications 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "borderColor": "rgba(216,216,216,1)",
      "borderTopWidth": 1,
      "flex": 1,
      "padding": 10,
    }
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "claim": Object {
            "employer": "Consensys AG",
          },
          "exp": 1482354617248,
          "iat": 1482268217248,
          "iss": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "issuer": Object {
            "name": "Issuer Name",
          },
          "sub": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "token": "tokenstring",
        },
        Object {
          "claim": Object {
            "Name": "test",
          },
          "exp": 1482354617247,
          "iat": 1482268217247,
          "iss": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "sub": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "token": "tokenstring",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    invertStickyHeaders={undefined}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  Issuer Name
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Employer
                </Text>
              </View>
              <ExpirationItem
                d={2016-12-21T21:10:17.248Z}
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                Consensys AG
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  0x88647b5a...
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Name
                </Text>
              </View>
              <ExpirationItem
                d={2016-12-21T21:10:17.247Z}
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                test
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`rendering only pending verifications 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "borderColor": "rgba(216,216,216,1)",
      "borderTopWidth": 1,
      "flex": 1,
      "padding": 10,
    }
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "claim": Object {
            "employer": "Consensys AG",
          },
          "exp": 1482354617249,
          "iat": 1482268217249,
          "iss": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "issuer": Object {
            "name": "Issuer Name",
          },
          "sub": "0x88647b5a94cd8347c8f76c7b79c85bbfbf0e13a9",
          "token": "tokenstring",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    invertStickyHeaders={undefined}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#808080",
              "borderRadius": 10,
              "borderWidth": 0.2,
              "elevation": 1,
              "marginTop": 10,
              "shadowColor": "black",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(91,91,91,1)",
                        "fontFamily": "NunitoSans-Bold",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                    ]
                  }
                >
                  Issuer Name
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "rgba(155,155,155,1)",
                        "fontFamily": "NunitoSans-Light",
                        "fontSize": 12,
                        "letterSpacing": 0.5,
                        "lineHeight": 16,
                        "marginTop": 5,
                      },
                    ]
                  }
                >
                  Employer
                </Text>
              </View>
              <ExpirationItem
                d={2016-12-21T21:10:17.249Z}
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderColor": "#FFFFFF",
                    "borderRadius": 4,
                    "flex": 1,
                    "flexDirection": "column",
                    "paddingBottom": 14,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                    "paddingTop": 14,
                  },
                  Object {
                    "alignItems": "center",
                    "borderTopColor": "#808080",
                    "borderTopWidth": 0.5,
                    "flex": 1,
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgba(10, 10, 10, 0.5)",
                      "fontFamily": "NunitoSans-Bold",
                      "fontSize": 10,
                      "letterSpacing": 0.5,
                    },
                  ]
                }
              >
                Consensys AG
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
